--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "axios": "^0.18.0",
     "element-ui": "^2.4.5",
     "vue": "^2.5.17",
+    "vue-router": "^3.0.1",
     "vue-class-component": "^6.0.0",
-    "vue-property-decorator": "^7.0.0",
-    "vue-router": "^3.0.1"
+    "vue-property-decorator": "^7.0.0"
+
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0",
@@ -28,7 +29,7 @@
     "eslint-plugin-vue": "^5.0.0-0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
-    "typescript": "^3.0.0",
+    "typescript": "3.1.1",
     "vue-cli-plugin-element": "^1.0.0",
     "vue-template-compiler": "^2.5.17"
   },
